# rustverse

./: Cargo.toml  LICENSE  README.md
src/: main.rs
templates/: Cargo.toml.template  main.rs.template
templates/axum/: Cargo.toml.template  main.rs.template
