[package]
name = "rustverse"
version = "0.1.0"
edition = "2024"
description = "A simple Rust project generator — like cargo new, but friendlier."
license = "MIT"
repository = "https://github.com/Porrapat/rustverse"
readme = "README.md"
keywords = ["cli", "template", "axum", "generator"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
